<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/ncku"
    tools:context="mbp.alexpon.com.cardreader.AutoUpdate">

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auto_title"
        android:textSize="30sp"
        android:id="@+id/auto_title"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/auto_pic"
        android:src="@drawable/nfc"
        android:layout_below="@+id/auto_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auto_sub_title"
        android:id="@+id/col_title"
        android:gravity="center"
        android:layout_above="@+id/auto_spinner"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_btn_cancle"
        android:id="@+id/auto_cancle"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_first"
        android:id="@+id/auto_perso"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_btn_submit"
        android:id="@+id/auto_submit"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/auto_spinner"
        android:layout_toEndOf="@+id/auto_spinner" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:gravity="center"
        android:id="@+id/show_data_num"
        android:layout_above="@+id/auto_cancle"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#3333cc"
        android:popupBackground="#3333cc"
        android:id="@+id/auto_spinner"
        android:layout_above="@+id/show_data_num"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
