<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mbp.alexpon.com.cardreader.ManuallyUpdate"
    android:background="@drawable/ncku">

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:id="@+id/imageView"
        android:src="@drawable/nfc"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""
        android:id="@+id/data_area"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:layout_above="@+id/first" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:text="@string/auto_sync_btn_back"
        android:id="@+id/back"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:text="@string/main_first"
        android:id="@+id/first"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:text="@string/main_submit"
        android:id="@+id/sync"
        android:background="#00fa9a"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
